<resources>
    <string name="app_name">TakeMe</string>

    <string name="action_settings">Settings</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_sign_in_button">Sign In</string>

    <string name="title_activity_sign_up_take_me">Sign Up</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_phone_number">Phone Number</string>

    <string name="lbl_sign_up_take_me">Sign Up</string>
    <string name="lbl_sign_up_button">Sign Up</string>

    <string name="title_activity_main_take_me">MainTakeMeActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_search_view">Search</string>
    <string name="title_my_pets_view">My Pets</string>
    <string name="title_wish_list_view">Wish List</string>
    <string name="title_add_pet_action">Add Pet</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="msg_invalid_email_password">Invalid email or password. Please try again.</string>
    <string name="msg_invalid_email_format">Your email format is invalid</string>
    <string name="msg_invalid_password_format">
        Password must contain at least 8 characters including uppercase, lowercase and numbers
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_my_account_view">My Account</string>
    <string name="lbl_contact_details">Contact Details</string>
    <string name="lbl_description">Description</string>
    <string name="Size">Size</string>
    <string name="Gender">Gender</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_save_button">Save</string>
    <string name="lbl_sign_out_button">Sign Out</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_in_activity_lable">Sign In with Email</string>
    <string name="sign_up_activity_lable">Sign Up with Email</string>
    <string name="title_activity_take_me_start">Sign In or Sign Up</string>

    <string name="com_facebook_loginview_log_in_button_long">Facebook</string>
    <string name="facebook_app_id">894116220685422</string>
    <string name="lbl_name">Name</string>
    <string name="msg_error_pet_name">Please enter a pet name</string>
    <string name="msg_error_pet_description">Please enter pet Description</string>
    <string name="msg_error_pet_age">Please enter a pet petAge</string>
    <string name="msg_error_pet_picture">Please take a pet picture</string>
    <string name="msg_success_pet_ad_created">Pet ad created successfully</string>
    <string name="msg_error_pet_ad_created">Failed to create pet ad</string>
    <string name="lbl_pet_age">Age</string>
    <string name="title_pets_List">Pets List</string>

    <string-array name="pet_type">
        <item>All Types</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Rabbit</item>
        <item>Hamster</item>
    </string-array>

    <string-array name="pet_size">
        <item>All Sizes</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
    </string-array>

    <string-array name="pet_gender">
        <item>All Genders</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="new_pet_type">
        <item>Dog</item>
        <item>Cat</item>
        <item>Rabbit</item>
        <item>Hamster</item>
    </string-array>

    <string-array name="new_pet_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
    </string-array>

    <string-array name="new_pet_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
