<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.takeme.takemeapp.activities.SignUpTakeMeActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sign_in_button"
            android:id="@+id/btnSignIn"
            android:enabled="true"
            android:elegantTextHeight="true"
            android:textAllCaps="false"
            android:onClick="onSignIn"
            android:layout_gravity="right"
            android:textColor="@android:color/black"

            android:background="@android:color/transparent"
            android:layout_marginRight="-10dp" />

            <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etEmail"
                android:hint="@string/lbl_email_address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etPassword"
                android:hint="@string/lbl_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etFirstName"
                android:hint="@string/lbl_first_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etLastName"
                android:hint="@string/lbl_last_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|phone"
                android:ems="10"
                android:id="@+id/etPhoneNumber"
                android:hint="@string/lbl_phone_number" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sign_up_button"
                android:id="@+id/btnSignUp"
                android:textAllCaps="false"
                android:onClick="onSignUp" />

        </LinearLayout>

    </RelativeLayout>
</layout>