<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_first_name"
                android:layout_marginTop="15dp"
                android:enabled="false"
                android:focusable="false" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_last_name"
                android:layout_marginTop="15dp"
                android:enabled="false"
                android:focusable="false" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_phone_number"
                android:layout_marginTop="15dp"
                android:enabled="false"
                android:focusable="false" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_address"
                android:layout_marginTop="15dp"
                android:enabled="false"
                android:focusable="false" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sign_out_button"
                android:id="@+id/btnSignOut"
                android:textAllCaps="false"/>

        </LinearLayout>

</LinearLayout>
