<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.takeme.takemeapp.activities.StartTakeMeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginTop="25dp"
            android:gravity="center" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:textSize="16sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_weight=".5"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_sign_in_button"
                    android:id="@+id/button"
                    android:textAllCaps="false"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginTop="5dp"
                    android:onClick="onSignIn"/>

                <Button
                    android:layout_height="match_parent"
                    android:text="@string/lbl_sign_up_button"
                    android:id="@+id/button2"
                    android:textAllCaps="false"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_marginRight="-5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:onClick="onSignUp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
