<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:paddingTop="0dp"
                    android:orientation="vertical"
                    android:weightSum="2">

    <LinearLayout
        android:id="@+id/new_ad_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:paddingLeft="10dp">

        <LinearLayout
            android:id="@+id/det_cont"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_take_picture"
                android:scaleType="center"/>

                <EditText
                    android:id="@+id/etPetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_name"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:id="@+id/spPetType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="-4dp" />

                <Spinner
                    android:id="@+id/spPetSize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="-4dp" />

                <Spinner
                    android:id="@+id/spPetGender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="-4dp" />

                <Spinner
                    android:id="@+id/spPetAge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="-4dp"/>

                <EditText
                    android:id="@+id/etPetDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_description"
                    android:layout_marginTop="10dp" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/save_new_ad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lbl_save_button"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>